changed bamtools path to absolute

--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,9 @@
 # Makefile for smis_scaffold 
 CC=c++
+export MYSMISDIR=/lustre/scratch117/sciops/team117/hpag/fg6/analysis/Tests/smis
 
-CFLAGS= -O2  -Ibamtools/include -Wl,-rpath,bamtools/lib 
-LFLAGS= -lm -Lbamtools/lib -lbamtools -lz  
+CFLAGS= -O2  -I${MYSMISDIR}/src/bamtools/include -Wl,-rpath,${MYSMISDIR}/src/bamtools/lib
+LFLAGS= -lm -L${MYSMISDIR}/src/bamtools/lib -lbamtools -lz
 
 
 SMISSORTT= smis_sort.o
